Wed Aug 22 18:25:46 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c: Fix selection.  I think it's all dandy now.
	We check the current event for modifiers rather than try to trap
	all presses.

2001-08-22  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtkliststore.h (GTK_LIST_STORE_CLASS): Fix a small typo.
	It's LIST_STORE, not LISTSTORE.

Tue Aug 21 12:43:29 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtk.h: Remove commented out gtkpacker reference.

2001-08-21  Matthias Clasen  <matthiasc@waldgeist.poet.de>

	* configure.in (all_loaders): Add tga loader, 
	patch by Nicola Girardi. (#56067)

Tue Aug 21 02:57:13 2001  Jonathan Blandford  <jrb@redhat.com>>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Fix up selection
	a little.  More needs to be done tomorrow.

Tue Aug 21 00:45:55 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_destroy): Grr... Get it right.

Mon Aug 20 23:48:18 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_get_cell_area): Fix bug
	reported by Kristian Rietveld <kristian@planet.nl> to handle row
	== NULL.
	(gtk_tree_view_destroy): Fix bug reported by Kristian Rietveld
	<kristian@planet.nl> to change destroy order.

Mon Aug 20 11:39:44 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeselection.c (gtk_tree_selection_class_init): Use
	correct marshaller.

Sun Aug 19 03:22:59 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkliststore.c: Fix up warnings, #58928.

	* gtk/gtktreeselection.h: Change signal prototype, #58647

	* gtk/gtktreeview.c (_gdk_tree_view_find_node): Make more robust,
	#59221.

	* gtk/gtkstyle.c: Actually prelight arrow, #50981
	
2001-08-18  Hans Breuer  <hans@breuer.org>

	* gdk/gdk.def : updated externals

	* gdk/win32/gdkselection-win32.c : returning TRUE with gdk_selection_set
	is required to get (at least) visible in entry fields. Some selections
	are really handled now - even on win32 - but copying via middle